# Mini-Tech

./: .gitignore  CMakeLists.txt  LICENSE  _config.yml  changes.md  readme.md
.github/workflows/: build.yml
docs/: _config.yml  index.md  linux.md  overview.md  windows.md
docs/MiniGaffer/: BlurMeshAttributes.md  CurveLength.md  CurveResample.md  CurvesType.md  DeformTransform.md  GeometryMerge.md  MiniBlowCurves.md  MiniCurvesRigidBind.md  MiniPointBind.md  MiniPointDeformer.md  NoiseShaders.md  SubdivideMesh.md
docs/MiniGaffer/Curves/: CurveLength.md  CurveResample.md  Curves.md  CurvesType.md  DeformTransform.md  GrowCurves.md  MiniBlowCurves.md  MiniCurvesRigidBind.md  MiniPointBind.md  MiniPointDeformer.md
docs/MiniGaffer/Meshes/: BlurMeshAttributes.md  GeometryMerge.md  MeshCurvature.md  Meshes.md  SubdivideMesh.md
docs/MiniGaffer/Shading/: NoiseShaders.md  Shading.md
docs/MiniGafferBullet/: Bullet.md
docs/MiniGafferVDB/: AdvectPoints.md  MiniVDB.md  SampleGrids.md
examples/: GeometryMerge.gfr  PointDeformerExample.gfr  VolumeSample.gfr  blurPrimitiveVariablesExample.gfr  cameraPointCull.gfr  curvesType.gfr  grow.gfr  measureCurves.gfr  meshCurvatureExample.gfr  noise.gfr  physics-motion-blur.gfr  physics.gfr  resample.gfr  rigidBind.gfr  subdivide.gfr
include/Mini/: MiniBlurPrimitiveVariables.h  MiniBullet.h  MiniCurvesType.h  MiniGrowCurves.h  MiniMeasureCurves.h  MiniMergeGeometry.h  MiniMeshCurvature.h  MiniPointBind.h  MiniPointDeformer.h  MiniResampleCurves.h  MiniSubdivideMesh.h  TypeIds.h
include/Mini/BulletPhysics/: CollisionShape.h  Convert.h  Solver.h
include/MiniGafferVDB/: AdvectGrids.h  AdvectPoints.h  CSGLevelSets.h  ClipGrids.h  CompositeGrids.h  DeleteGrids.h  Dispatcher.h  Export.h  FilterGrids.h  FilterLevelSet.h  FractureLevelSets.h  Interrupter.h  IntersectLevelSet.h  LevelSetToFog.h  LevelSetToMesh.h  MaskGrids.h  MathOpGrids.h  MeasureLevelSet.h  MeshToLevelSet.h  MorphLevelSets.h  OffsetLevelSet.h  PlatonicLevelSet.h  PointsGridToPoints.h  PointsToLevelSet.h  SampleGrids.h  ScatterPoints.h  SegmentLevelSets.h  SphereLevelSet.h  StatisticsGrids.h  TransformGrids.h  TypeIds.h  VDBObject.h  VolumeToSpheres.h
nodes/: MiniCurvesRigidBind.grf  MiniMerge.grf  arnoldInitializer.grf  bubbleMask.grf  cameraFrustumPointCull.grf  cameraReader.grf  curvesRigidBind.grf  decimateCurves.grf  decimatePoints.grf  makeDeformTransform.grf  manifold.grf  oslRandom.grf  windDeformer.grf
python/MiniGaffer/: __init__.py
python/MiniGafferTest/: BlurPrimitiveVariablesTest.py  MiniBulletTest.py  MiniCurvesTypeTest.py  MiniMeasureCurvesTest.py  MiniMergeGeometryTest.py  MiniMeshCurvatureTest.py  MiniPointBindTest.py  MiniPointDeformerTest.py  MiniResampleCurvesTest.py  MiniSubdivideMeshTest.py  __init__.py
python/MiniGafferUI/: MiniBlurPrimitiveVariablesUI.py  MiniBulletUI.py  MiniCurvesTypeUI.py  MiniGrowCurvesUI.py  MiniMeasureCurvesUI.py  MiniMergeGeometryUI.py  MiniMeshCurvatureUI.py  MiniPointBindUI.py  MiniPointDeformerUI.py  MiniResampleCurvesUI.py  MiniSubdivideMeshUI.py  __init__.py
python/MiniGafferUITest/: DocumentationTest.py  __init__.py
python/MiniGafferVDB/: __init__.py
python/MiniGafferVDBTest/: AdvectPointsTest.py  __init__.py
python/MiniGafferVDBUI/: AdvectGridsUI.py  AdvectPointsUI.py  CSGLevelSetsUI.py  ClipGridsUI.py  CompositeGridsUI.py  DeleteGridsUI.py  FilterGridsUI.py  FilterLevelSetUI.py  IntersectLevelSetUI.py  LevelSetToFogUI.py  LevelSetToMeshUI.py  MaskGridsUI.py  MathOpGridsUI.py  MeasureLevelSetUI.py  MeshToLevelSetUI.py  MiniSampleGridsUI.py  MorphLevelSetsUI.py  OffsetLevelSetUI.py  PlatonicLevelSetUI.py  PointsGridToPointsUI.py  PointsToLevelSetUI.py  SampleGridsUI.py  ScatterPointsUI.py  SegmentLevelSetsUI.py  SphereLevelSetUI.py  StatisticsGridsUI.py  TransformGridsUI.py  VDBObjectUI.py  VolumeToSpheresUI.py  __init__.py
shaders/: alligator.osl  alligator.osl.h  mini_noise.osl.h  perlin_flow.osl  perlin_flow.osl.h  readme.md  simplex.osl  simplex.osl.h  simplex_flow.osl  simplex_flow.osl.h
src/MiniGaffer/: MiniBlurPrimitiveVariables.cpp  MiniBullet.cpp  MiniCurvesType.cpp  MiniGrowCurves.cpp  MiniMeasureCurves.cpp  MiniMergeGeometry.cpp  MiniMeshCurvature.cpp  MiniPointBind.cpp  MiniPointDeformer.cpp  MiniResampleCurves.cpp  MiniSubdivideMesh.cpp
src/MiniGaffer/BulletPhysics/: CollisionShape.cpp  Convert.cpp  Solver.cpp
src/MiniGafferModule/: MiniGafferModule.cpp
src/MiniGafferVDB/: AdvectGrids.cpp  AdvectPoints.cpp  CSGLevelSets.cpp  ClipGrids.cpp  CompositeGrids.cpp  DeleteGrids.cpp  Dispatcher.cpp  FactureLevelSets.cpp  FilterGrids.cpp  FilterLevelSet.cpp  IntersectLevelSet.cpp  LevelSetToFog.cpp  MaskGrids.cpp  MathOpGrids.cpp  MeasureLevelSet.cpp  MorphLevelSets.cpp  OffsetLevelSet.cpp  PlatonicLevelSet.cpp  PointsGridToPoints.cpp  PointsToLevelSet.cpp  SampleGrids.cpp  SegmentLevelSets.cpp  SphereLevelSet.cpp  StatisticsGrids.cpp  TransformGrids.cpp  VDBObject.cpp  VolumeToSpheres.cpp
src/MiniGafferVDBModule/: MiniGafferVDBModule.cpp
startup/gui/: customVariables.py  examples.py  startup.py
